crates/as2/src/snapshots/rascal_as2__program__tests__all_samples@AnEmptyInterface.as.snap
---
source: crates/as2/src/program.rs
expression: parsed
input_file: samples/as2_classes/AnEmptyInterface.as
---
Ok:
  initial_script: []
  interfaces:
    - name: AnEmptyInterface
      extends: ~
      functions: {}
  classes: []
