crates/as2/src/snapshots/rascal_as2__program__tests__all_samples@AnExtendingInterface.as.snap
---
source: crates/as2/src/program.rs
expression: parsed
input_file: samples/as2_classes/AnExtendingInterface.as
---
Ok:
  initial_script: []
  interfaces:
    - name: AnExtendingInterface
      extends: AnEmptyInterface
      body: []
    - name: AnEmptyInterface
      extends: ~
      body: []
