crates/as2/src/snapshots/rascal_as2__program__tests__all_samples@ClassMembersTest.as.snap
---
source: crates/as2/src/program.rs
expression: parsed
input_file: samples/as2_classes/ClassMembersTest.as
---
Ok:
  initial_script: []
  interfaces:
    - name: AnEmptyInterface
      extends: ~
      functions: {}
  classes:
    - name: ClassMembersTest
      extends: ~
      implements:
        - AnEmptyInterface
      functions:
        test:
          signature:
            name:
              span:
                start: 142
                end: 146
              value: test
            args: []
            return_type: ~
          body:
            - Expr:
                span:
                  start: 159
                  end: 173
                value:
                  Trace:
                    span:
                      start: 165
                      end: 172
                    value:
                      Constant:
                        String: test!
        greet:
          signature:
            name:
              span:
                start: 277
                end: 282
              value: greet
            args:
              - name: name
                type_name:
                  span:
                    start: 289
                    end: 295
                  value: String
            return_type:
              span:
                start: 298
                end: 302
              value: Void
          body:
            - Expr:
                span:
                  start: 313
                  end: 340
                value:
                  Trace:
                    span:
                      start: 319
                      end: 339
                    value:
                      BinaryOperator:
                        - Add
                        - span:
                            start: 319
                            end: 333
                          value:
                            BinaryOperator:
                              - Add
                              - span:
                                  start: 319
                                  end: 326
                                value:
                                  Constant:
                                    String: "Hey, "
                              - span:
                                  start: 329
                                  end: 333
                                value:
                                  Constant:
                                    Identifier: name
                        - span:
                            start: 336
                            end: 339
                          value:
                            Constant:
                              String: "!"
      variables:
        regularPropertyWithoutValue:
          name:
            span:
              start: 61
              end: 88
            value: regularPropertyWithoutValue
          value: ~
          type_name: ~
        regularPropertySetToFive:
          name:
            span:
              start: 98
              end: 122
            value: regularPropertySetToFive
          value:
            span:
              start: 125
              end: 126
            value:
              Constant:
                Integer: 5
          type_name: ~
      constructor:
        signature:
          name:
            span:
              start: 195
              end: 211
            value: ClassMembersTest
          args:
            - name: name
              type_name:
                span:
                  start: 218
                  end: 224
                value: String
          return_type: ~
        body:
          - Expr:
              span:
                start: 240
                end: 255
              value:
                Call:
                  name:
                    span:
                      start: 240
                      end: 246
                    value:
                      Field:
                        - span:
                            start: 236
                            end: 240
                          value:
                            Constant:
                              Identifier: this
                        - span:
                            start: 241
                            end: 246
                          value:
                            Constant:
                              String: greet
                  args:
                    - span:
                        start: 247
                        end: 254
                      value:
                        Constant:
                          String: world
