crates/as2/src/snapshots/rascal_as2__program__tests__all_samples@DynamicClass.as.snap
---
source: crates/as2/src/program.rs
expression: parsed
input_file: samples/as2_classes/DynamicClass.as
---
Ok:
  initial_script: []
  interfaces: []
  classes:
    - name: DynamicClass
      extends: ~
      implements: []
      functions: {}
      virtual_properties: {}
      fields: {}
      constructor:
        signature:
          name:
            span:
              start: 14
              end: 26
            value: DynamicClass
          args: []
          return_type: ~
        body: []
