crates/as2/src/snapshots/rascal_as2__program__tests__all_samples@EmptyClass.as.snap
---
source: crates/as2/src/program.rs
expression: parsed
input_file: samples/as2_classes/EmptyClass.as
---
Ok:
  initial_script: []
  interfaces: []
  classes:
    - name: EmptyClass
      extends: ~
      implements: []
      functions: {}
      virtual_properties: {}
      fields: {}
      constructor:
        signature:
          name:
            span:
              start: 6
              end: 16
            value: EmptyClass
          args: []
          return_type: ~
        body: []
