crates/as2/src/snapshots/rascal_as2__program__tests__all_samples@comments.as.snap
---
source: crates/as2/src/program.rs
expression: parsed
input_file: samples/as2/comments.as
---
Ok:
  initial_script:
    - Declare:
        - name:
            span:
              start: 112
              end: 113
            value: a
          value:
            span:
              start: 116
              end: 119
            value:
              Constant:
                String: "1"
          type_name: ~
    - Declare:
        - name:
            span:
              start: 244
              end: 245
            value: b
          value:
            span:
              start: 248
              end: 251
            value:
              Constant:
                String: "2"
          type_name: ~
    - Declare:
        - name:
            span:
              start: 311
              end: 312
            value: c
          value:
            span:
              start: 371
              end: 374
            value:
              Constant:
                String: "3"
          type_name: ~
    - Declare:
        - name:
            span:
              start: 447
              end: 448
            value: d
          value:
            span:
              start: 451
              end: 454
            value:
              Constant:
                String: "4"
          type_name: ~
    - Expr:
        span:
          start: 506
          end: 578
        value:
          Call:
            name:
              span:
                start: 506
                end: 510
              value:
                Constant:
                  Identifier: test
            args:
              - span:
                  start: 529
                  end: 530
                value:
                  Constant:
                    Identifier: a
              - span:
                  start: 575
                  end: 576
                value:
                  Constant:
                    Identifier: b
    - Declare:
        - name:
            span:
              start: 652
              end: 653
            value: e
          value:
            span:
              start: 656
              end: 659
            value:
              Constant:
                String: "5"
          type_name: ~
    - Declare:
        - name:
            span:
              start: 666
              end: 667
            value: f
          value:
            span:
              start: 670
              end: 688
            value:
              Constant:
                String: // not a comment
          type_name: ~
    - Declare:
        - name:
            span:
              start: 723
              end: 724
            value: g
          value:
            span:
              start: 727
              end: 748
            value:
              Constant:
                String: /* not a comment */
          type_name: ~
    - Declare:
        - name:
            span:
              start: 789
              end: 790
            value: h
          value:
            span:
              start: 793
              end: 824
            value:
              Constant:
                String: "\"/* still not a comment */\""
          type_name: ~
    - Declare:
        - name:
            span:
              start: 894
              end: 895
            value: i
          value:
            span:
              start: 898
              end: 901
            value:
              Constant:
                String: "6"
          type_name: ~
    - Declare:
        - name:
            span:
              start: 1038
              end: 1039
            value: j
          value:
            span:
              start: 1042
              end: 1045
            value:
              Constant:
                String: "7"
          type_name: ~
    - Declare:
        - name:
            span:
              start: 1111
              end: 1112
            value: k
          value:
            span:
              start: 1115
              end: 1118
            value:
              Constant:
                String: "8"
          type_name: ~
  interfaces: []
  classes: []
